# agent-release-notes-kit

./: AGENTS.md  CHANGELOG.md  CHECKPOINT.md  README.md  RELEASE_COMPARISON.md  RELEASE_NOTES.md  pyproject.toml  release-comparison.json  release-inputs.json  release-summary-v0.2.0.json  release-summary.json
examples/cross-asset/: current-release-summary.json  previous-release-summary.json
examples/github-body/: GITHUB_RELEASE_BODY.md  release-summary.json
release_notes_kit/: __init__.py  __main__.py  cli.py  collect.py  compare.py  core.py  errors.py  git.py  github_body.py  inputs.py  render.py  selfcheck.py
scripts/: selfcheck.py
tests/: test_cli.py  test_collect.py  test_compare.py  test_github_body.py  test_inputs.py  test_render.py
